--- a/.github/workflows/saludo.yaml
+++ b/.github/workflows/saludo.yaml
@@ -1,1 +1,15 @@
 
+name: Enviar saludo
+on: 
+  workflow_dispach
+
+
+jobs:
+  saludo:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Mostrar saludo
+        run: echo "Hola desde la clase de Github actions"
+
+      - name: Mostrar ubicacion
+        run: pwd
